# spooky_go

./: .gitignore  .gitmodules  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  run_benchmark.fish  run_lints.fish  run_profile.fish  run_python_tests.fish  run_rust_tests.fish  run_tests.fish  rust_go.pyi  setup.py  spooky_go.pyi
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml  version-bump.yml
benches/: benchmarks.rs
src/: bitboard.rs  board.rs  dispatch.rs  encode.rs  game.rs  lib.rs  move.rs  outcome.rs  player.rs  position.rs  serde_support.rs
src/gtp/: client.rs  engine.rs  error.rs  mod.rs  protocol.rs  test.rs  vertex.rs
src/python/: dispatch.rs  mod.rs  py_board.rs  py_game.rs  py_game_outcome.rs  py_gtp.rs  py_move.rs
tests/: test_board.py  test_encode.py  test_game.py  test_gtp.py  test_move.py  test_outcome.py
tests/comparison/: test_compare_with_dlgo_fuzz.py  test_compare_with_dlgo_performance.py
