[package]
name = "spooky_go"
version = "0.2.20"
edition = "2021"
description = "Go board game engine"
license = "MIT"
repository = "https://github.com/snowdrop4/spooky-go"
include = ["src/**/*.rs", "benches/**/*.rs", "Cargo.toml", "README.md", "LICENSE.md"]

[lib]
name = "spooky_go"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
bitflags = "2.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
rand = "0.10.0"
num_cpus = "1.16"
bincode = "1.3.3"
paste = "1.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["serde"]
python = ["pyo3"]
serde = ["dep:serde"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
