[package]
name = "spooky_go"
version = "0.3.0"
edition = "2021"
description = "Go board game engine"
license = "MIT"
repository = "https://github.com/snowdrop4/spooky-go"
include = ["src/**/*.rs", "benches/**/*.rs", "Cargo.toml", "README.md", "LICENSE.md"]

[lib]
name = "spooky_go"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
paste = "1.0"
rand = "0.10.0"
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench"]

[features]
default = []
python = ["pyo3"]
bench = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
