[package]
name = "spooky_go"
version = "0.4.0"
edition = "2021"
description = "Go board game engine"
license = "MIT"
repository = "https://github.com/snowdrop4/spooky-go"
include = ["src/**/*.rs", "benches/**/*.rs", "Cargo.toml", "README.md", "LICENSE.md"]

[lib]
name = "spooky_go"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
paste = "1.0"
rand = "0.10.0"
hotpath = { version = "0.13" }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bin]]
name = "profile"
path = "src/bin/profile.rs"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench"]

[features]
default = []
python = ["pyo3"]
bench = []
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-mcp = ["hotpath/hotpath-mcp"]

[lints.clippy]
unwrap_used = "deny"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
